--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Matdu</title>
-  <link rel="stylesheet" href="/styles.css">
+	<title>Matdu</title>
+	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <img src="/matdu.jpg">
+	<div align="center">
+		<img src="/matdu.jpg">
+	</div>
 </body>
 </html>
