--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Matdu</title>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
 	<div align="center">
