--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Matdu</title>
-	<link rel="stylesheet" href="/style.css">
-</head>
-<body>
-	<div align="center">
-		<img src="/matdu.jpg">
-	</div>
-</body>
-</html>
+---
+layout: index
+section-type: index
+sitemap:
+  priority: 1.0
+---
+<!--
+If you want to have a static message in your intro layout, disable the dynamic-typing in the _config.yml and write here your text
+-->
