Edited README; Edited About.html; Edited Contact.html; Edited License;

--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,8 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested in me coding for you or saving your neighborhood!
+Drop me an email if you are interested in me coding for you or saving the galaxy!
+
+<small>
+*Can't guarantee the last one*
+</small>
