--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 ---
 ## About
 
-I'm Matheus 'Matdu' Alves, I'm a passionate gamer, since I was 4, loved technology, learning it, playing with it, discovering it, 2014 I got my first job working as Front-End developer with some Back-End developing aswell, since then I've grown love for Front End developing and still learning Back End, of course!
+I'm Matheus 'Matdu' Alves, I'm a passionate gamer, since I was 4, I loved technology, from learning it, to playing with it and discovering it, 2014 I got my first job working as a Front-End developer with some Back-End development aswell, since then I've grown love for Front End development while still learning Back End, of course!
 
 <small>
 *“Re did di doo.”* – Matdu
